--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Password_Generator</title>
+    <title>Password Generator</title>
     <link rel="stylesheet" href="CSS/index.css">
     <link rel="icon" href="https://img.icons8.com/officel/80/sound-recording-copyright.png" type="image/png"
         sizes="80x80">
